--- a/CrudPracticaExamen/Views/Persona/Details.cshtml
+++ b/CrudPracticaExamen/Views/Persona/Details.cshtml
@@ -42,9 +42,10 @@
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Foto)
+            
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Foto)
+            <img src=@Html.DisplayFor(model => model.Foto) />
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.FechaNacimiento)
@@ -61,6 +62,6 @@
     </dl>
 </div>
 <div>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
+    @Html.ActionLink("Edit", "Edit", new { id = Model.Id })
     <a asp-action="Index">Back to List</a>
 </div>
