--- a/CrudPracticaExamen/Views/Persona/Index.cshtml
+++ b/CrudPracticaExamen/Views/Persona/Index.cshtml
@@ -58,7 +58,7 @@
                 @Html.DisplayFor(modelItem => item.Direccion)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Foto)
+                <img src=@Html.DisplayFor(modelItem => item.Foto) />
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.FechaNacimiento)
